--- a/Tugas 1/Latihan 2.html
+++ b/Tugas 1/Latihan 2.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Belajar Heading</title>
     </head>
     <body>
         <!-- Heading dari H1 sampai H6 -->
